name:                 constraint-manip
version:              0.1.0.0
synopsis:             Some conviencience type functions for manipulating constraints.
description:
  This package contains some useful classes for creating and combining constraints of one variable.
homepage:
author:               Clinton Mead
maintainer:           clintonmead@gmail.com
category:             
license: MIT
license-file: LICENSE
copyright: Clinton Mead (2017)
build-type:           Simple
tested-with: GHC == 8.0.2
cabal-version:        >=1.10

library
  exposed-modules: Control.ConstraintManip
  build-depends:        base == 4.9.*, indextype == 0.2.*
  hs-source-dirs:       src
  default-language:     Haskell2010
